[Backport] 8305896: Alternative full GC forwarding
Summary: Introduce UseAltGCForwarding to support alternative full GC forwarding.
	 Now support G1 and parallelGC. The code accords to 8305896 and https://github.com/openjdk/lilliput-jdk17u/

Test Plan: CICD

Reviewed-by: yude.lin, yifeng.jin

Issue: https://github.com/dragonwell-project/dragonwell11/issues/683